fix: styling. Make sure the backdrop works on Safari, and the navbar dropdown will always be only be on top
fix the base text color of buttons on Safari

fix the backdrop filter on Safari

--- a/src/css/Videos.css
+++ b/src/css/Videos.css
@@ -47,6 +47,12 @@
   z-index: 2;
 }
 
+.frame.vert .paper-border::before,
+.frame.vert.paper-border::after {
+  top: -0.2rem;
+  bottom: -0.2rem;
+}
+
 .paper {
   background-color: var(--bg);
   width: 100%;
@@ -66,6 +72,7 @@
   left: 0.25rem;
   right: 0.25rem;
   z-index: 4;
+  background-color: rgba(255, 255, 255, 0.05);
   background-image: repeating-linear-gradient(
       0deg,
       rgb(203, 196, 196) 0px,
@@ -82,6 +89,7 @@
     );
   mix-blend-mode: multiply;
   backdrop-filter: blur(30px) brightness(0.5) saturate(0.3);
+  -webkit-backdrop-filter: blur(30px) brightness(0.5) saturate(0.3);
 }
 
 .paper::after {
@@ -327,6 +335,7 @@
   padding: 1rem 1.25rem;
   border-radius: 5rem;
   cursor: pointer;
+  color: black;
 }
 
 .view-switch > button.active {
